--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="prototype.pdf" style="color: black;">طراحی دستی</a>
             </li>
             <li class="nav-item" style="padding-left: 250px; ">
-                <a class="nav-link" href="#" style="color: black;">تحلیل نیازها </a>
+                <a class="nav-link" href="CoReading%20Project%20-%20Documentation.pdf" style="color: black;">تحلیل نیازها </a>
             </li>
             <li class="nav-item" style="padding-left: 250px; ">
                 <a class="nav-link" href="#" style="color: black;">وایر فریم</a>
